# rlgym-rlbot

./: .gitignore  README.md  pyproject.toml
rlgym_rlbot/: __init__.py  actor.py  id.py  rlgym_bot.py  rlgym_script.py  rlgym_state_to_rlbot_state.py  util.py
