[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "rlgym-rlbot"
version = "0.2.1"
requires-python = ">=3.8,<3.13"
authors = [
    { name = "Jonathan Keegan" }
]
classifiers = [
    "Programming Language :: Python :: 3",
]
description = "Wrapper logic to use bots trained with RLGym v2 using the RocketSimTransitionEngine in RLBot v5"
readme = "README.md"
license-files = [
    "LICENSE"
]
dependencies = [
    "rlbot == 2.0.0b52",
    "rlgym[api] >= 2.0.1",
    "rlgym-compat @ git+https://github.com/JPK314/rlgym-compat.git@ed589f8"
]
keywords=[
    "rocket-league",
    "gym",
    "reinforcement-learning",
    "simulation",
    "rlgym",
    "rocketsim",
]

[project.optional-dependencies]
rocketsim = ["rocketsim >= 2.1"]


[project.urls]
Repository = "https://github.com/JPK314/rlgym-rlbot.git"
Issues = "https://github.com/JPK314/rlgym-rlbot/issues"
